serde-query/tests/compile-fail/conflicting_query.stderr
error: Conflicting query at '.foo'. The query for field 'field_access' expects a struct while the query for field 'index_access' expects a sequence.
 --> tests/compile-fail/conflicting_query.rs:4:5
  |
4 |     field_access: String,
  |     ^^^^^^^^^^^^

error: Conflicting query at '.foo'. The query for field 'expect_value' expects a value here while the query for field 'expect_struct' expects a struct.
  --> tests/compile-fail/conflicting_query.rs:12:5
   |
12 |     expect_value: String,
   |     ^^^^^^^^^^^^
